<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:layout_gravity="center"
    android:background="#FFFFFF" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#FFFFFF"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        >

        <ImageView
            android:id="@+id/mainactivity_logo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/logoseamensor300dpi"
            android:layout_gravity="center_horizontal">
        </ImageView>

        <EditText android:id="@+id/accountName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/accountname"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            />

        <EditText android:id="@+id/accountPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/Password"
            android:padding="10dp"
            />

        <Button android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/SignIn"
            android:padding="10dp"/>

        <TextView android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/newuser"
            android:padding="10dp"/>

    </LinearLayout>
</RelativeLayout>