<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:visibility="visible" >

    <ImageButton
        android:id="@+id/button1"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:onClick="onButtonClick"
        android:src="@drawable/cancel"
        />

    <ListView
    	android:id="@+id/vp_list"
    	android:layout_width="130dp"
    	android:layout_height="wrap_content"
    	android:layout_alignParentTop="true"
    	/>

    <TextView
        android:id="@+id/xPosView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/vp_00"
        android:background="@android:color/holo_blue_dark"
        android:visibility="gone" 
        />
    <TextView
        android:id="@+id/yPosView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/xPosView"
        android:gravity="center"
        android:text="@string/vp_00"
        android:background="@android:color/holo_blue_dark"
        android:visibility="gone" 
        />
    <TextView
        android:id="@+id/zPosView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/yPosView"
        android:gravity="center"
        android:text="@string/vp_00"
        android:background="@android:color/holo_blue_dark"
        android:visibility="gone" 
        />
    <TextView
        android:id="@+id/xRotView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/zPosView"
        android:gravity="center"
        android:text="@string/vp_00"
        android:background="@android:color/holo_blue_dark"
        android:visibility="gone" 
        />
    <TextView
        android:id="@+id/yRotView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/xRotView"
        android:gravity="center"
        android:text="@string/vp_00"
        android:background="@android:color/holo_blue_dark"
        android:visibility="gone" 
        />
    <TextView
        android:id="@+id/zRotView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/yRotView"
        android:gravity="center"
        android:text="@string/vp_00"
        android:background="@android:color/holo_blue_dark"
        android:visibility="gone" 
        />
    <TextView
        android:id="@+id/trkQualityView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/zRotView"
        android:gravity="center"
        android:text="@string/vp_00"
        android:background="@android:color/holo_blue_dark"
        android:visibility="gone"
        />
    <com.seamensor.seamensor.TouchImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/vp_list"
        android:src="@drawable/descvpblank"
        android:visibility="gone"
        />
    
    <ImageView
        android:id="@+id/imageViewTarget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/targetwhite"
        android:visibility="gone"
        />

    <ImageButton
        android:id="@+id/button3"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:adjustViewBounds="true"
        android:onClick="onButtonClick"
        android:padding="4dp"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        android:src="@drawable/logoseamensor300dpi"
        android:visibility="visible" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/button3"
        android:onClick="onButtonClick"
        android:padding="10dp"
        android:text="@string/button_ok"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/buttonRequestPhoto"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/button2"
        android:onClick="onButtonClick"
        android:padding="10dp"
        android:text="@string/button_text_request_photo"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/buttonIncreaseQtyVps"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/vp_list"
        android:onClick="onButtonClick"
        android:padding="10dp"
        android:text="@string/button_text_increase_qtyvps"
        android:visibility="gone"
        />
    
    <Button
        android:id="@+id/buttonDecreaseQtyVps"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/buttonIncreaseQtyVps"
        android:onClick="onButtonClick"
        android:padding="10dp"
        android:text="@string/button_text_decrease_qtyvps"
        android:visibility="gone"
        />
            
    <Button
        android:id="@+id/buttonSaveTrackingVpsData"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/buttonDecreaseQtyVps"
        android:onClick="onButtonClick"
        android:padding="10dp"
        android:text="@string/button_text_save_tracking_vps_data"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/buttonAmbiguousVpToggle"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageView1"
        android:layout_below="@+id/descVPEditText"
        android:background="@drawable/custom_button"
        android:textColor="#000000"
        android:onClick="onButtonClick"
        android:padding="10dp"
        android:text="@string/button_ambiguous_vp_toggle"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/buttonFlashTorchVpToggle"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageView1"
        android:layout_below="@+id/buttonAmbiguousVpToggle"
        android:background="@drawable/custom_button"
        android:textColor="#000000"
        android:onClick="onButtonClick"
        android:padding="10dp"
        android:text="@string/button_flash_torch_vp_toggle"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/buttonSuperSingleVpToggle"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageView1"
        android:layout_below="@+id/buttonFlashTorchVpToggle"
        android:background="@drawable/custom_button"
        android:textColor="#000000"
        android:onClick="onButtonClick"
        android:padding="10dp"
        android:text="@string/button_super_single_vp_toggle"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/buttonId20mmToggle"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageView1"
        android:layout_below="@+id/buttonSuperSingleVpToggle"
        android:background="@drawable/custom_button"
        android:textColor="#000000"
        android:onClick="onButtonClick"
        android:padding="10dp"
        android:text="@string/button_id_20mm_vp_toggle"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/buttonId100mmToggle"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageView1"
        android:layout_below="@+id/buttonId20mmToggle"
        android:background="@drawable/custom_button"
        android:textColor="#000000"
        android:onClick="onButtonClick"
        android:padding="10dp"
        android:text="@string/button_id_100mm_vp_toggle"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/descVPEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:lines="2"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/button1"
        android:layout_toRightOf="@+id/textView2"
        android:gravity="left|top"
        android:text="@string/desc_vp_empty"
        android:textColor="@android:color/holo_blue_light"
        android:background="@android:color/background_dark"
        android:visibility="gone"
        android:inputType="text|textCapSentences|textAutoCorrect"
        android:imeOptions="actionDone"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/vp_list"
        android:gravity="center"
        android:text="@string/vp_00"
        android:background="@android:color/holo_blue_dark"
        android:visibility="gone" 
        />
     
    <TextView
        android:id="@+id/vpAcquiredStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_toRightOf="@id/vp_list"
        android:layout_below="@+id/textView2"
        android:gravity="center"
        android:text="@string/vpNotAcquiredStatus"
        android:textColor="@android:color/holo_blue_light"
        android:background="@android:color/background_dark"
        android:visibility="gone" 
        />
    
</RelativeLayout>