<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:layout_gravity="center"
    android:background="#FFFFFF" >

    <ImageButton
        android:id="@+id/exitbutton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:onClick="onButtonClick"
        android:src="@drawable/cancel"
        android:scaleType="fitXY"
        android:layout_gravity="right" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/MainActivityLinearLayout"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/mainactivity_logo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/logoseamensor300dpi"
            android:layout_gravity="center_horizontal">
        </ImageView>

        <TextView
            android:id="@+id/userlogstate_message"
            android:layout_width="match_parent"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/userstate_loggedout"
            android:textAlignment="center"
            android:textColor="#FF464646"
            android:visibility="visible"
            android:textSize="18sp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault"
            android:gravity="center"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp">

            <Button
                android:text="@string/login_btn_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonlog"
                android:gravity="center_vertical"
                android:onClick="onButtonClick"
                android:layout_margin="4dp" />

            <Button
                android:text="@string/start_config"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonconfig"
                android:gravity="center_vertical"
                android:onClick="onButtonClick"
                android:layout_margin="4dp" />

            <Button
                android:text="@string/start_cap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttoncap"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:onClick="onButtonClick"
                android:layout_margin="4dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>